Add StreamUtil.repeatForever and repeat variant